[package]
name = "central"
version = "0.0.1"
authors = ["Murillo Nicacio <mnmaraes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = {version = "1", features = ["derive"]}
clap = "2.33.0"
