[package]
name = "central_cli"
version = "0.1.0"
authors = ["Murillo Nicacio <mnmaraes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.3"
clap = "2.33.0"
tokio = { version = "0.2.4", features = ["full"] }
central_pm = { path = "../central_pm" }
pg = { path = "../storage/pg" }
