[package]
name = "central_station"
version = "0.1.0"
authors = ["Murillo Nicacio <mnmaraes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.4", features = ["full"] }
shared_memory = "0.10.0"
